PY_04
'''
def add(a,b):
  result = a + b
  return result
'''

'''
>>> def sub(a,b):
...     return a - b
... 
>>> result = sub(a=7, b=3)
>>> print(result)
4
>>> result = sub(b=5, a=3)
>>> print(result)
-2
>>> def add_many(*args):
...     result = 0
...     for i in args:
...         result = result + i
...     return result
... 
>>> result = add_many(1,2,3)
>>> print(result)
6
>>> result = add_many(1, 2, 3, 4, 5, 6, 7, 8, 9, 10)
>>> print(result)
55
>>> def add_mul(choise, *args):
...     if choise == "add":
...        result = 0
  File "<stdin>", line 3
    result = 0
              ^
IndentationError: unindent does not match any outer indentation level
>>> def print_kwargs(**kwargs):
...     print(kwargs)
... 
>>> print_kwargs(ㅁ=1)
{'ᄆ': 1}
>>> print_kwargs(a=1)
{'a': 1}
>>> print_kwargs(name='foo', age=3)
{'name': 'foo', 'age': 3}
>>> 

'''
'''
def say_myself(name, age, man=True):
    print("나의 이름은 %s입니다." % name)
    print("나이는 %d살입니다." % age)
    if man:
        print("남자입니다.")
    else:
            print("여자입니다.")
'''
'''
def say_myself(name, man=True, age):
    print("나의 이름은 %s입니다." % name)
    print("나이는 %d살입니다." % age)
    if man:
        print("남자입니다.")
    else:
        print("여자입니다.")
'''
'''
a = 1
def vartest(a):
    a = a + 1
vartest(a)
print(a)
'''

'''
a = 1
def vartest(a):
  a = a + 1
  return a

a = vartest(a)
print(a)
'''

'''
add = lambda a,b: a + b
result = add(3,4)
print(result)
'''

'''
def add(a,b):
    return a + b

result = add(3,4)
print(result)
'''

'''
>>> a = input()
Life is too short, you need python
>>> a 
'Life is too short, you need python'
>>> 
'''

'''
f = open("C:/doit/새파일.txt", 'w')
f.close()
'''
'''
f = open("C:/doit/새파일.txt", 'w')
for i in range(1, 11):
    data = "%d번째 줄입니다.\n" % i
    f.write(data)
f.close()
'''
'''
f = open("C:/doit/새파일.txt", 'r')
lines = f.readlines()
for line in lines:
    print(line)
f.close()
'''












# 04장

'''
>>> def is_odd(number):
...     if number % 2 == 1:
...         return True
...     else:
...         return False
  File "<stdin>", line 5
    return False
TabError: inconsistent use of tabs and spaces in indentation
>>> is_odd(3)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'is_odd' is not defined
>>> is_odd(4)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'is_odd' is not defined
'''


'''
>>> def avg_numbers(*args):
...     result = 0
...     for i in args:
...         result += 1
...     return result / len(args)
... 
>>> avg_number(1,2)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'avg_number' is not defined. Did you mean: 'avg_numbers'?
>>> avg_numbers(1,2,3,4,5)
1.0
>>> avg_numbers(1,2)
1.0
>>> 
'''


'''
input1 = input("첫 번째 숫자를 입력하세요:")
input2 = input("두 번째 숫자를 입력하세요:")

total = int(input1) + int(input2)
print("두 수의 합은 %s닙니다" % total)
'''

'''
>>> print("you"+"need"+"python")
youneedpython
>>> print("you" "need" "python")
youneedpython
>>> print("you", "need", "python")
you need python
>>> print("".join(["you", "need", "python"]))
youneedpython
>>> 
'''

'''
f1 = open("test.txt", 'w')
f1.write("Life is too short!")

f2 = open("tsst.txt", 'r')
print(f2.read())
f2.close()
'''

'''
with open("test.txt", 'w') as f1:
    f1.write("Life is too short!")

with open("test.txt", 'r') as f2:
    print(f2.read())
'''

'''
user_input = input("저장할 내용을 입력하세요:")
f = open('test.txt', 'a')
f.write(user_input)
f.write("\n")
f.close()
'''

'''
f = open('test.txt', 'r')
body = f.read()
f.close()

body = body.replace('java', 'python')

f = open('test.txt', 'w')
f.write(body)
f.close()
'''

'''
import sys
numbers = sys.argv[1:]

result = 0
for number in numbers:
  result += int(number)
print(result)
'''
























